--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -13,95 +13,56 @@
             text-align: center;
         }
 
-        /* Add a card effect for articles */
+        /* Add a card effect for challenges */
         .card {
             padding: 20px;
             margin-top: 20px;
-            align-content: space-evenly;
+            background-color: #eeeeee;
+            border-color: #eeeeee;
         }
 
-        /* Create two unequal columns that floats next to each other */
-        /* Left column */
-        .leftcolumn {
-            float: left;
-            width: 75%;
-        }
-
-        /* Right column */
-        .rightcolumn {
-            float: right;
-            width: 25%;
-            padding-left: 30px;
-        }
-
-        /* Clear floats after the columns */
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        .blog-post {
-            margin-bottom: 4rem;
-        }
-        .blog-post-title {
+        .card-title {
             margin-bottom: 20px;
             text-align: left;
         }
-        .blog-post-meta {
+
+        .card-subtitle {
             color: #727272;
             text-align: left;
         }
-        .blog-post-content{
+
+        .card-text{
             text-align: justify;
         }
 
-        @media screen and (max-width: 800px) {
-          .leftcolumn, .rightcolumn {
-            width: 100%;
-            padding: 0;
-          }
+        .flex-container {
+            display: block;
+            flex-wrap: wrap;
         }
+
     </style>
 
-    <div class="column is-6 is-offset-3">
+    <div class="flex-container">
         <h1 class="title is-1 header">CHALLENGES</h1>
-        <div class="box row">
-            {% for challenge in challenges %}
-                <div class="leftcolumn">
-                    <div class="card blog-post">
-                        <h2 class="blog-post-title">{{ challenge.title }}</h2>
-                        <h5 class="blog-post-meta text-muted">{{ challenge.created.strftime('%d-%m-%Y') }}</h5>
-                        <p class="blog-post-content">{{ challenge.body }}</p>
-                        {% if challenge.username == current_user.username %}
-                            <div class="btn-group btn-group-justified">
-                                <a type="button" class="btn btn-outline-primary" href="{{ url_for('challenges.update', id=challenge.id) }}" role="button">Update</a>
-                                <a type="button" class="btn btn-outline-danger" href="{{ url_for('challenges.delete', id=challenge.id) }}" role="button">Delete</a>
-                            </div>
-                            <br>
-                            <a type="button" class="btn btn-outline-success btn-block" href="{{ url_for('challenges.join', id=challenge.id) }}" role="button">Join Challenge</a>
-                        {% endif %}
-                    </div>
+        {% for challenge in challenges %}
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-subtitle mb-2 text-muted">{{ challenge.created.strftime("%d %B, %Y") }}</h5>
+                    <h2 class="card-title">{{ challenge.title }}</h2>
+                    <p class="card-text">{{ challenge.body }}</p>
+                    <br>
+                    {% if challenge.username == current_user.username %}
+                        <div class="d-grid gap-2 col-6 mx-auto btn-group" role="group" aria-label="Basic outlined example">
+                            <a type="button" class="btn btn-outline-primary" href="{{ url_for('challenges.update', id=challenge.id) }}" role="button">Update</a>
+                            <a type="button" class="btn btn-outline-danger" href="{{ url_for('challenges.delete', id=challenge.id) }}" role="button">Delete</a>
+                        </div>
+                    {% endif %}
+                    {% if current_user.role == 'user' %}
+                        <a type="button" class="btn btn-outline-success d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.join', id=challenge.id) }}" role="button">Join Challenge</a>
+                    {% endif %}
                 </div>
-                <div class="rightcolumn">
-                    <div class="card">
-                        <h2>About Me</h2>
-                        <div class="fakeimg" style="height:100px;">Image</div>
-                        <p>Some text...</p>
-                    </div>
-                    <div class="card">
-                        <h3>Popular Post</h3>
-                        <div class="fakeimg">{{ challenge.title }}</div><br>
-                        <div class="fakeimg">Image</div><br>
-                        <div class="fakeimg">Image</div>
-                    </div>
-                    <div class="card">
-                        <h3>Follow Me</h3>
-                        <p>Some text..</p>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
