--- a/templates/posts.html
+++ b/templates/posts.html
@@ -13,89 +13,44 @@
             text-align: center;
         }
 
-        /* Add a card effect for articles */
+        /* Add a card effect for posts */
         .card {
             padding: 20px;
             margin-top: 20px;
-            align-content: space-evenly;
+            background-color: #eeeeee;
+            border-color: #eeeeee;
         }
 
-        /* Create two unequal columns that floats next to each other */
-        /* Left column */
-        .leftcolumn {
-            float: left;
-            width: 75%;
-        }
-
-        /* Right column */
-        .rightcolumn {
-            float: right;
-            width: 25%;
-            padding-left: 30px;
-        }
-
-        /* Clear floats after the columns */
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        .blog-post {
-            margin-bottom: 4rem;
-        }
-        .blog-post-title {
+        .card-title {
             margin-bottom: 20px;
             text-align: left;
         }
-        .blog-post-meta {
+
+        .card-subtitle {
             color: #727272;
             text-align: left;
         }
-        .blog-post-content{
+
+        .card-text{
             text-align: justify;
         }
 
-        @media screen and (max-width: 800px) {
-          .leftcolumn, .rightcolumn {
-            width: 100%;
-            padding: 0;
-          }
-        }
     </style>
 
+    <div class="container">
         <h1 class="title is-1 header">POSTS</h1>
-        <div class="box row">
+        <div class="card">
             {% for post in posts %}
-                <div class="leftcolumn">
-                    <div class="card blog-post">
-                        <h2 class="blog-post-title">{{ post.title }}</h2>
-                        <h5 class="blog-post-meta text-muted">{{ post.created.strftime('%d-%m-%Y') }}</h5>
-                        <p class="blog-post-content">{{ post.body }}</p>
-                        {% if post.username == current_user.username %}
-                            <div class="btn-group btn-group-justified">
-                                <a type="button" class="btn btn-outline-primary" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
-                                <a type="button" class="btn btn-outline-danger" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
-                            </div>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="rightcolumn">
-                    <div class="card">
-                        <h2>About Me</h2>
-                        <div class="fakeimg" style="height:100px;">Image</div>
-                        <p>Some text...</p>
-                    </div>
-                    <div class="card">
-                        <h3>Popular Post</h3>
-                        <div class="fakeimg">{{ post.title }}</div><br>
-                        <div class="fakeimg">Image</div><br>
-                        <div class="fakeimg">Image</div>
-                    </div>
-                    <div class="card">
-                        <h3>Follow Me</h3>
-                        <p>Some text..</p>
-                    </div>
+                <div class="card-body">
+                    <h5 class="card-subtitle mb-2 text-muted">{{ post.created.strftime("%d %B, %Y") }}</h5>
+                    <h2 class="card-title">{{ post.title }}</h2>
+                    <p class="card-text">{{ post.body }}</p>
+                    {% if post.username == current_user.username %}
+                        <div class="d-grid gap-2 col-6 mx-auto btn-group" role="group" aria-label="Basic outlined example">
+                            <a type="button" class="btn btn-outline-primary" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
+                            <a type="button" class="btn btn-outline-danger" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
+                        </div>
+                    {% endif %}
                 </div>
             {% endfor %}
         </div>
